{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 67,
  "lineage": "810589c4-3632-0fd9-10b1-e3d35eadbd91",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:security-group/sg-065df14dbd3fe4dc1",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-065df14dbd3fe4dc1",
            "ingress": [],
            "name": "devops-demo-eks-cluster-2025081912202355740000000e",
            "name_prefix": "devops-demo-eks-cluster-",
            "owner_id": "741448963304",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-demo-eks-cluster"
            },
            "tags_all": {
              "Name": "devops-demo-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:security-group/sg-0a295c14131c1fc35",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0a295c14131c1fc35",
            "ingress": [],
            "name": "devops-demo-eks-node-2025081912202387980000000f",
            "name_prefix": "devops-demo-eks-node-",
            "owner_id": "741448963304",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-demo-eks-node",
              "kubernetes.io/cluster/devops-demo-eks": "owned"
            },
            "tags_all": {
              "Name": "devops-demo-eks-node",
              "kubernetes.io/cluster/devops-demo-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2631798697",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-065df14dbd3fe4dc1",
            "security_group_rule_id": "sgr-088ff9417763decdf",
            "self": false,
            "source_security_group_id": "sg-0a295c14131c1fc35",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2194373979",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a295c14131c1fc35",
            "security_group_rule_id": "sgr-00ca1187a11f16271",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1778513249",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a295c14131c1fc35",
            "security_group_rule_id": "sgr-03c94196d32769b39",
            "self": false,
            "source_security_group_id": "sg-065df14dbd3fe4dc1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1544138862",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a295c14131c1fc35",
            "security_group_rule_id": "sgr-0ebd1697e8e40f443",
            "self": false,
            "source_security_group_id": "sg-065df14dbd3fe4dc1",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2504775672",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a295c14131c1fc35",
            "security_group_rule_id": "sgr-0cc04701369f0f5ff",
            "self": false,
            "source_security_group_id": "sg-065df14dbd3fe4dc1",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2249714649",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a295c14131c1fc35",
            "security_group_rule_id": "sgr-03b9f9630fcaca6ad",
            "self": false,
            "source_security_group_id": "sg-065df14dbd3fe4dc1",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3803633682",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a295c14131c1fc35",
            "security_group_rule_id": "sgr-0edfa630bd8687083",
            "self": false,
            "source_security_group_id": "sg-065df14dbd3fe4dc1",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1715599416",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a295c14131c1fc35",
            "security_group_rule_id": "sgr-0a8c4c1eb6bc33d64",
            "self": false,
            "source_security_group_id": "sg-065df14dbd3fe4dc1",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-335204546",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a295c14131c1fc35",
            "security_group_rule_id": "sgr-0720905709c543921",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4283844523",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a295c14131c1fc35",
            "security_group_rule_id": "sgr-0be31314c926ffc68",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1527374916",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a295c14131c1fc35",
            "security_group_rule_id": "sgr-05fa8cbad0baf87e0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:network-acl/acl-01a520ae14990a5ea",
            "default_network_acl_id": "acl-01a520ae14990a5ea",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01a520ae14990a5ea",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "741448963304",
            "subnet_ids": [
              "subnet-00a938e7ab17d71d4",
              "subnet-07a7ea8797ce019fc",
              "subnet-07baff239c71211a9",
              "subnet-085c5b0d1b0b87a92",
              "subnet-0cb81699b343e7a17",
              "subnet-0f26d135981984ed5"
            ],
            "tags": {
              "Name": "devops-demo-vpc-default"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-default"
            },
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:route-table/rtb-02e4662afe5e99d7f",
            "default_route_table_id": "rtb-02e4662afe5e99d7f",
            "id": "rtb-02e4662afe5e99d7f",
            "owner_id": "741448963304",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "devops-demo-vpc-default"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:security-group/sg-0274e36c3ef23b260",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0274e36c3ef23b260",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "741448963304",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-demo-vpc-default"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-default"
            },
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de113f14bf9ad309",
            "arn": "arn:aws:ec2:eu-west-2:741448963304:elastic-ip/eipalloc-0de113f14bf9ad309",
            "domain": "vpc",
            "id": "eipalloc-0de113f14bf9ad309",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-51-24-0-210.eu-west-2.compute.amazonaws.com",
            "public_ip": "51.24.0.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-demo-vpc-eu-west-2a"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-eu-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071b00be57612ce79",
            "arn": "arn:aws:ec2:eu-west-2:741448963304:elastic-ip/eipalloc-071b00be57612ce79",
            "domain": "vpc",
            "id": "eipalloc-071b00be57612ce79",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-133-22-217.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.22.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-demo-vpc-eu-west-2b"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-eu-west-2b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048bfdd64bcbd7248",
            "arn": "arn:aws:ec2:eu-west-2:741448963304:elastic-ip/eipalloc-048bfdd64bcbd7248",
            "domain": "vpc",
            "id": "eipalloc-048bfdd64bcbd7248",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-3-8-218-110.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.218.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-demo-vpc-eu-west-2c"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-eu-west-2c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:internet-gateway/igw-0469b6cf0e84ce4d3",
            "id": "igw-0469b6cf0e84ce4d3",
            "owner_id": "741448963304",
            "tags": {
              "Name": "devops-demo-vpc"
            },
            "tags_all": {
              "Name": "devops-demo-vpc"
            },
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de113f14bf9ad309",
            "association_id": "eipassoc-09b8353e7d6fc9a93",
            "connectivity_type": "public",
            "id": "nat-0a9c4e946edc63ab4",
            "network_interface_id": "eni-0ab292369a1ae1ea7",
            "private_ip": "10.0.11.227",
            "public_ip": "51.24.0.210",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f26d135981984ed5",
            "tags": {
              "Name": "devops-demo-vpc-eu-west-2a"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-eu-west-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071b00be57612ce79",
            "association_id": "eipassoc-0e5b6e0ab4fc22e30",
            "connectivity_type": "public",
            "id": "nat-0cd1b6512841d681d",
            "network_interface_id": "eni-0f7c92dbac77de612",
            "private_ip": "10.0.12.59",
            "public_ip": "18.133.22.217",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cb81699b343e7a17",
            "tags": {
              "Name": "devops-demo-vpc-eu-west-2b"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-eu-west-2b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048bfdd64bcbd7248",
            "association_id": "eipassoc-0293fc75bbebceba6",
            "connectivity_type": "public",
            "id": "nat-06d53471e542a172c",
            "network_interface_id": "eni-0d3721647de5d0321",
            "private_ip": "10.0.13.8",
            "public_ip": "3.8.218.110",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07a7ea8797ce019fc",
            "tags": {
              "Name": "devops-demo-vpc-eu-west-2c"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-eu-west-2c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-066a5effda9c3ef371080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a9c4e946edc63ab4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-066a5effda9c3ef37",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04f38e99c934dbc981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cd1b6512841d681d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04f38e99c934dbc98",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08c040362f6d7af321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06d53471e542a172c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08c040362f6d7af32",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0469b6cf0e84ce4d3",
            "id": "r-rtb-065a910add787d4191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-065a910add787d419",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:route-table/rtb-066a5effda9c3ef37",
            "id": "rtb-066a5effda9c3ef37",
            "owner_id": "741448963304",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devops-demo-vpc-private-eu-west-2a"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-private-eu-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:route-table/rtb-04f38e99c934dbc98",
            "id": "rtb-04f38e99c934dbc98",
            "owner_id": "741448963304",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devops-demo-vpc-private-eu-west-2b"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-private-eu-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:route-table/rtb-08c040362f6d7af32",
            "id": "rtb-08c040362f6d7af32",
            "owner_id": "741448963304",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devops-demo-vpc-private-eu-west-2c"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-private-eu-west-2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:route-table/rtb-065a910add787d419",
            "id": "rtb-065a910add787d419",
            "owner_id": "741448963304",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devops-demo-vpc-public"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0672e9941ff793b8d",
            "route_table_id": "rtb-066a5effda9c3ef37",
            "subnet_id": "subnet-00a938e7ab17d71d4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0d184ba7f4c1e96",
            "route_table_id": "rtb-04f38e99c934dbc98",
            "subnet_id": "subnet-07baff239c71211a9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b060cee67cb622e6",
            "route_table_id": "rtb-08c040362f6d7af32",
            "subnet_id": "subnet-085c5b0d1b0b87a92"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b60a5e7cadeff058",
            "route_table_id": "rtb-065a910add787d419",
            "subnet_id": "subnet-0f26d135981984ed5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f7b73a8e5d6cd31",
            "route_table_id": "rtb-065a910add787d419",
            "subnet_id": "subnet-0cb81699b343e7a17"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ded6345d92b4782",
            "route_table_id": "rtb-065a910add787d419",
            "subnet_id": "subnet-07a7ea8797ce019fc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:subnet/subnet-00a938e7ab17d71d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a938e7ab17d71d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448963304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-demo-vpc-private-eu-west-2a"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-private-eu-west-2a"
            },
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:subnet/subnet-07baff239c71211a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07baff239c71211a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448963304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-demo-vpc-private-eu-west-2b"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-private-eu-west-2b"
            },
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:subnet/subnet-085c5b0d1b0b87a92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085c5b0d1b0b87a92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448963304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-demo-vpc-private-eu-west-2c"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-private-eu-west-2c"
            },
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:subnet/subnet-0f26d135981984ed5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f26d135981984ed5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448963304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-demo-vpc-public-eu-west-2a"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-public-eu-west-2a"
            },
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:subnet/subnet-0cb81699b343e7a17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb81699b343e7a17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448963304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-demo-vpc-public-eu-west-2b"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-public-eu-west-2b"
            },
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:subnet/subnet-07a7ea8797ce019fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a7ea8797ce019fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448963304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-demo-vpc-public-eu-west-2c"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-public-eu-west-2c"
            },
            "vpc_id": "vpc-0e30ad2fceec89f10"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:741448963304:vpc/vpc-0e30ad2fceec89f10",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a520ae14990a5ea",
            "default_route_table_id": "rtb-02e4662afe5e99d7f",
            "default_security_group_id": "sg-0274e36c3ef23b260",
            "dhcp_options_id": "dopt-03d0b10d7e81af2cc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e30ad2fceec89f10",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e4662afe5e99d7f",
            "owner_id": "741448963304",
            "tags": {
              "Name": "devops-demo-vpc"
            },
            "tags_all": {
              "Name": "devops-demo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}